--- a/templates/business_forms/new_product_form.html
+++ b/templates/business_forms/new_product_form.html
@@ -31,24 +31,27 @@
                         </div>
                     </div>
                     <div class="description_container_header_body" dir="auto">
-                        Всем доброго дня!
+                        Анкета нового продукта по эндометриозу
+                        <br>
+                        Барышни, прием!
                         <br>
                         <br>
-                        Меня зовут Кушнир Марина Александровна, врач-кардиолог, терапевт.
+                        Меня зовут Радутинских Яна Александровна, я- оперирующий гинеколог
                         <br>
                         <br>
-                        Вы очень поможете, если ответите на вопросы в анкете. Опрос анонимный.
+                        Вы очень поможете, если ответите на вопросы в анкете. Опрос, разумеется, анонимный.
                         <br>
                         <br>
                         Вопросы касаются вашего здоровья. Благодаря ответам я смогу сделать продукт, который поможет ВАМ
-                        и сотням человек улучшить свое здоровье, понять <b>в чём причина аритмии</b>, научиться её
-                        контролировать и повысить качество жизни.
+                        и сотням страдающих от эндометриоза женщин научиться жить с этим заболевание, понять "что это за
+                        болезнь", какие методы и направления в лечении есть, на какие моменты в течение болезни нужно
+                        обратить свое внимание, как научиться жить с эндометриозом и как повысить свое качество жизни.
                         <br>
                         <br>
                         Время заполнения - 3 минуты
                         <br>
                         <br>
-                        Всех, кто ответит на все вопросы, будет ждать приятный подарок от меня в конце 😌🎁
+                        Всем, кто найдет на это время, подарю небольшой, но приятный бонус 😌🎁
                     </div>
                 </div>
             </div>
