--- a/templates/business_forms/spasibo_new_product_form.html
+++ b/templates/business_forms/spasibo_new_product_form.html
@@ -24,7 +24,7 @@
         <div class="inline_container">
             <div class="description_container_header_cap"></div>
             <div class="">
-                Спасибо за честные ответы! Напишите мне в тг <a href="https://t.me/doc_radutinskih_forms" target="_blank">https://t.me/doc_radutinskih_forms</a>
+                Спасибо за честные ответы! Напишите мне в тг <a href="https://t.me/dr_radutinskih" target="_blank">https://t.me/dr_radutinskih</a>
                 слово ИНТЕРВЬЮ, если хочешь получить «второе мнение» побыстрее 😇
             </div>
         </div>
