--- a/templates/business_forms/new_product_form.html
+++ b/templates/business_forms/new_product_form.html
@@ -82,7 +82,7 @@
                                             {{ field.label }}
                                         {% else %}
                                             Согласен с
-                                            <a href="https://yadi.sk/i/1V8R_gwtXtkZZQ?view=1"
+                                            <a href="https://docs.google.com/document/d/1ziLR5zcP_3hzbHXrBylz6h-ukqjwvXFesQNA0DgBrkM/edit?usp=drivesdk"
                                                target="_blank">политикой обработки персональных данных</a>
                                         {% endif %}
                                         {% if field.field.required %}
